--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
-/*  your css code here. If applicable */
+body{
+	background-color:
+}
+table{
+	 width: 100%;
+     border-collapse: collapse;
+    
+}
+ td {
+            border: 1px solid #ddd;
+            padding: 15px;
+            vertical-align: middle;
+ }
+
+
